@@ -23,38 +23,54 @@ import java.io.InputStream;
 import java.io.OutputStream;
 import java.io.PrintStream;
 import java.nio.file.Files;
-import java.nio.file.Paths;
+import java.nio.file.Path;
 import java.nio.file.StandardOpenOption;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
+import java.util.TreeSet;
+import java.util.concurrent.atomic.AtomicBoolean;
 import java.util.function.Predicate;
 import java.util.stream.Collectors;
 
+import org.apache.accumulo.core.data.ResourceGroupId;
+import org.apache.commons.lang3.StringUtils;
 import org.yaml.snakeyaml.Yaml;
+
+import com.google.common.base.Preconditions;
 
 import edu.umd.cs.findbugs.annotations.SuppressFBWarnings;
 
 public class ClusterConfigParser {
 
   private static final String PROPERTY_FORMAT = "%s=\"%s\"%n";
-  private static final String[] SECTIONS = new String[] {"manager", "monitor", "gc", "tserver"};
+  private static final String COMPACTOR_PREFIX = "compactor.";
+  private static final String GC_KEY = "gc";
+  private static final String MANAGER_KEY = "manager";
+  private static final String MONITOR_KEY = "monitor";
+  private static final String SSERVER_PREFIX = "sserver.";
+  private static final String TSERVER_PREFIX = "tserver.";
 
-  private static final Set<String> VALID_CONFIG_KEYS =
-      Set.of("manager", "monitor", "gc", "tserver", "tservers_per_host", "compaction.coordinator");
+  private static final String HOSTS_SUFFIX = ".hosts";
+  private static final String SERVERS_PER_HOST_SUFFIX = ".servers_per_host";
+
+  private static final String[] UNGROUPED_SECTIONS =
+      new String[] {MANAGER_KEY, MONITOR_KEY, GC_KEY};
+
+  private static final Set<String> VALID_CONFIG_KEYS = Set.of(MANAGER_KEY, MONITOR_KEY, GC_KEY);
 
   private static final Set<String> VALID_CONFIG_PREFIXES =
-      Set.of("compaction.compactor.", "sserver.", "compactors_per_host.", "sservers_per_host.");
+      Set.of(COMPACTOR_PREFIX, SSERVER_PREFIX, TSERVER_PREFIX);
 
   private static final Predicate<String> VALID_CONFIG_SECTIONS =
       section -> VALID_CONFIG_KEYS.contains(section)
           || VALID_CONFIG_PREFIXES.stream().anyMatch(section::startsWith);
 
   @SuppressFBWarnings(value = "PATH_TRAVERSAL_IN", justification = "paths not set by user input")
-  public static Map<String,String> parseConfiguration(String configFile) throws IOException {
+  public static Map<String,String> parseConfiguration(Path configFile) throws IOException {
     Map<String,String> results = new HashMap<>();
-    try (InputStream fis = Files.newInputStream(Paths.get(configFile), StandardOpenOption.READ)) {
+    try (InputStream fis = Files.newInputStream(configFile, StandardOpenOption.READ)) {
       Yaml y = new Yaml();
       Map<String,Object> config = y.load(fis);
       config.forEach((k, v) -> flatten("", k, v, results));
@@ -89,8 +105,31 @@ public class ClusterConfigParser {
     } else if (value instanceof Number) {
       results.put(parent + key, value.toString());
     } else {
-      throw new IllegalStateException("Unhandled object type: " + value.getClass());
+      throw new IllegalStateException(
+          "Unhandled object type: " + ((value == null) ? "null" : value.getClass()));
     }
+  }
+
+  private static TreeSet<ResourceGroupId> parseGroup(Map<String,String> config, String prefix) {
+    Preconditions.checkArgument(prefix.equals(COMPACTOR_PREFIX) || prefix.equals(SSERVER_PREFIX)
+        || prefix.equals(TSERVER_PREFIX));
+    return config.keySet().stream().filter(k -> k.startsWith(prefix)).map(k -> {
+      int periods = StringUtils.countMatches(k, '.');
+      if (periods == 1) {
+        return k.substring(prefix.length());
+      } else if (periods == 2) {
+        if (k.endsWith(HOSTS_SUFFIX)) {
+          return k.substring(prefix.length(), k.indexOf(HOSTS_SUFFIX));
+        } else if (k.endsWith(SERVERS_PER_HOST_SUFFIX)) {
+          return k.substring(prefix.length(), k.indexOf(SERVERS_PER_HOST_SUFFIX));
+        } else {
+          throw new IllegalArgumentException("Unknown group suffix for: " + k + ". Only "
+              + HOSTS_SUFFIX + " or " + SERVERS_PER_HOST_SUFFIX + " are allowed.");
+        }
+      } else {
+        throw new IllegalArgumentException("Malformed configuration, has too many levels: " + k);
+      }
+    }).map(ResourceGroupId::of).collect(Collectors.toCollection(TreeSet::new));
   }
 
   public static void outputShellVariables(Map<String,String> config, PrintStream out) {
@@ -101,72 +140,91 @@ public class ClusterConfigParser {
           throw new IllegalArgumentException("Unknown configuration section : " + section);
         });
 
-    for (String section : SECTIONS) {
+    for (String section : UNGROUPED_SECTIONS) {
       if (config.containsKey(section)) {
         out.printf(PROPERTY_FORMAT, section.toUpperCase() + "_HOSTS", config.get(section));
       } else {
-        if (section.equals("manager") || section.equals("tserver")) {
-          throw new IllegalStateException("Required configuration section is missing: " + section);
+        if (section.equals(MANAGER_KEY)) {
+          throw new IllegalStateException("Manager is required in the configuration");
         }
         System.err.println("WARN: " + section + " is missing");
       }
     }
 
-    if (config.containsKey("compaction.coordinator")) {
-      out.printf(PROPERTY_FORMAT, "COORDINATOR_HOSTS", config.get("compaction.coordinator"));
+    var compactorGroups = parseGroup(config, COMPACTOR_PREFIX);
+    if (compactorGroups.isEmpty()) {
+      throw new IllegalArgumentException(
+          "No compactor groups found, at least one compactor group is required to compact the system tables.");
     }
-
-    String compactorPrefix = "compaction.compactor.";
-    Set<String> compactorQueues =
-        config.keySet().stream().filter(k -> k.startsWith(compactorPrefix))
-            .map(k -> k.substring(compactorPrefix.length())).collect(Collectors.toSet());
-
-    if (!compactorQueues.isEmpty()) {
-      out.printf(PROPERTY_FORMAT, "COMPACTION_QUEUES",
-          compactorQueues.stream().collect(Collectors.joining(" ")));
-      for (String queue : compactorQueues) {
-        out.printf(PROPERTY_FORMAT, "COMPACTOR_HOSTS_" + queue,
-            config.get("compaction.compactor." + queue));
-        String numCompactors = config.getOrDefault("compactors_per_host." + queue, "1");
-        out.printf(PROPERTY_FORMAT, "NUM_COMPACTORS_" + queue, numCompactors);
+    if (!compactorGroups.isEmpty()) {
+      out.printf(PROPERTY_FORMAT, "COMPACTOR_GROUPS",
+          String.join(" ", compactorGroups.stream().map(ResourceGroupId::canonical).toList()));
+      for (ResourceGroupId group : compactorGroups) {
+        out.printf(PROPERTY_FORMAT, "COMPACTOR_HOSTS_" + group,
+            config.get(COMPACTOR_PREFIX + group + HOSTS_SUFFIX));
+        String numCompactors =
+            config.getOrDefault(COMPACTOR_PREFIX + group + SERVERS_PER_HOST_SUFFIX, "1");
+        out.printf(PROPERTY_FORMAT, "COMPACTORS_PER_HOST_" + group, numCompactors);
       }
     }
 
-    String sserverPrefix = "sserver.";
-    Set<String> sserverGroups = config.keySet().stream().filter(k -> k.startsWith(sserverPrefix))
-        .map(k -> k.substring(sserverPrefix.length())).collect(Collectors.toSet());
-
+    var sserverGroups = parseGroup(config, SSERVER_PREFIX);
     if (!sserverGroups.isEmpty()) {
       out.printf(PROPERTY_FORMAT, "SSERVER_GROUPS",
-          sserverGroups.stream().collect(Collectors.joining(" ")));
+          String.join(" ", sserverGroups.stream().map(ResourceGroupId::canonical).toList()));
       sserverGroups.forEach(ssg -> out.printf(PROPERTY_FORMAT, "SSERVER_HOSTS_" + ssg,
-          config.get(sserverPrefix + ssg)));
-      sserverGroups.forEach(ssg -> out.printf(PROPERTY_FORMAT, "NUM_SSERVERS_" + ssg,
-          config.getOrDefault("sservers_per_host." + ssg, "1")));
+          config.get(SSERVER_PREFIX + ssg + HOSTS_SUFFIX)));
+      sserverGroups.forEach(ssg -> out.printf(PROPERTY_FORMAT, "SSERVERS_PER_HOST_" + ssg,
+          config.getOrDefault(SSERVER_PREFIX + ssg + SERVERS_PER_HOST_SUFFIX, "1")));
     }
 
-    String numTservers = config.getOrDefault("tservers_per_host", "1");
-    out.print("NUM_TSERVERS=\"${NUM_TSERVERS:=" + numTservers + "}\"\n");
+    var tserverGroups = parseGroup(config, TSERVER_PREFIX);
+    if (tserverGroups.isEmpty()) {
+      throw new IllegalArgumentException(
+          "No tserver groups found, at least one tserver group is required to host the system tables.");
+    }
+    AtomicBoolean foundTServer = new AtomicBoolean(false);
+    if (!tserverGroups.isEmpty()) {
+      out.printf(PROPERTY_FORMAT, "TSERVER_GROUPS",
+          String.join(" ", tserverGroups.stream().map(ResourceGroupId::canonical).toList()));
+      tserverGroups.forEach(tsg -> {
+        String hosts = config.get(TSERVER_PREFIX + tsg + HOSTS_SUFFIX);
+        foundTServer.compareAndSet(false, hosts != null && !hosts.isEmpty());
+        out.printf(PROPERTY_FORMAT, "TSERVER_HOSTS_" + tsg, hosts);
+      });
+      tserverGroups.forEach(tsg -> out.printf(PROPERTY_FORMAT, "TSERVERS_PER_HOST_" + tsg,
+          config.getOrDefault(TSERVER_PREFIX + tsg + SERVERS_PER_HOST_SUFFIX, "1")));
+    }
 
+    if (!foundTServer.get()) {
+      throw new IllegalArgumentException(
+          "Tablet Server group found, but no hosts. Check the format of your cluster.yaml file.");
+    }
     out.flush();
   }
 
   @SuppressFBWarnings(value = "PATH_TRAVERSAL_IN",
       justification = "Path provided for output file is intentional")
   public static void main(String[] args) throws IOException {
+
     if (args == null || args.length < 1 || args.length > 2) {
       System.err.println("Usage: ClusterConfigParser <configFile> [<outputFile>]");
       System.exit(1);
     }
 
-    if (args.length == 2) {
-      // Write to a file instead of System.out if provided as an argument
-      try (OutputStream os = Files.newOutputStream(Paths.get(args[1]), StandardOpenOption.CREATE);
-          PrintStream out = new PrintStream(os)) {
-        outputShellVariables(parseConfiguration(args[0]), new PrintStream(out));
+    try {
+      if (args.length == 2) {
+        // Write to a file instead of System.out if provided as an argument
+        try (OutputStream os = Files.newOutputStream(Path.of(args[1]));
+            PrintStream out = new PrintStream(os)) {
+          outputShellVariables(parseConfiguration(Path.of(args[0])), out);
+        }
+      } else {
+        outputShellVariables(parseConfiguration(Path.of(args[0])), System.out);
       }
-    } else {
-      outputShellVariables(parseConfiguration(args[0]), System.out);
+    } catch (Exception e) {
+      System.err.println("Processing error: " + e.getMessage());
+      System.exit(1);
     }
   }
 
